# file-type-identifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
fti/: __init__.py  file_types.py  getters.py
fti/file_type_getters/: __init__.py  get_by_content_disposition.py  get_by_content_header.py  get_by_mimetype.py  get_by_url.py
tests/: test_get_by_content_disposition.py  test_get_by_content_header.py  test_get_by_mimetype.py  test_get_by_url.py  test_getters.py
